--- a/backend/package.json
+++ b/backend/package.json
@@ -13,11 +13,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "api": "file:",
     "dotenv": "^16.4.5",
-    "express": "^4.21.1"
+    "express": "^4.17.11",
+    "mysql2": "^3.11.3",
+    "sequelize": "^6.37.5"
   },
   "devDependencies": {
-    "@types/express": "^5.0.0",
+    "@types/express": "^4.17.11",
     "@types/node": "^22.8.1",
     "concurrently": "^9.0.1",
     "nodemon": "^3.1.7",
