--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "api": "file:",
     "dotenv": "^16.4.5",
     "express": "^4.17.11",
+    "express-validator": "^7.2.0",
     "mysql2": "^3.11.3",
     "sequelize": "^6.37.5"
   },
